--- a/gradle.properties
+++ b/gradle.properties
@@ -7,13 +7,13 @@ org.gradle.daemon=false
 ## Environment Properties
 
 # The Minecraft version must agree with the Forge version to get a valid artifact
-minecraft_version=1.21.5
+minecraft_version=1.20.6
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.21.5,1.22)
+minecraft_version_range=[1.20.6,1.21)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=55.0.12
+forge_version=50.2.0
 # The Forge version range can use any version of Forge as bounds or match the loader version range
 forge_version_range=[0,)
 # The loader version range can only use the major version of Forge/FML as bounds
@@ -32,27 +32,27 @@ loader_version_range=[0,)
 #
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
-mapping_channel=official
+mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.21.5
+mapping_version=2024.06.16-1.20.6
 
 
 ## Mod Properties
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=examplemod
+mod_id=masonry
 # The human-readable display name for the mod.
-mod_name=Example Mod
+mod_name=MASONRY: Multi Agent Simulation of NPC in Minecraft ecosYstem
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0.0
+mod_version=0.1-1.20.6
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.example.examplemod
+mod_group_id=com.mas.masonry
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=YourNameHere, OtherNameHere
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
