Update/New goals

--- a/gradle.properties
+++ b/gradle.properties
@@ -54,6 +54,6 @@ mod_version=0.1-1.20.6
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=com.mas.masonry
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=YourNameHere, OtherNameHere
+mod_authors= Lauda Dhia Raka, Imtitsal Ulya Salsabila, Nicholas, Hanif Athalla Mahardika Haranto
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
