--- a/gradle.properties
+++ b/gradle.properties
@@ -56,4 +56,4 @@ mod_group_id=com.mas.masonry
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors= Lauda Dhia Raka, Imtitsal Ulya Salsabila, Nicholas, Hanif Athalla Mahardika Haranto
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=Project Tugas Besar untuk Mata Kuliah Sistem Multi Agen. Agen-agen ini bisa melakukan banyak hal, misalnya: bangun rumah, cari resource, dan interaksi dengan environment. Tujuan dari projek ini adalah menciptakan NPC Minecraft yang bisa kerja seperti manusia.
